--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-key-index": "^0.1.1",
+    "react-redux": "^7.2.2",
+    "react-router": "^4.3.1",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -34,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^4.3.1"
   }
 }
