--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-key-index": "^0.1.1",
+    "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
